--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/frotas
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=admin@gmail.com
+spring.datasource.password=Tads123
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=backend
